sonarcube shacl